--- a/a.html
+++ b/a.html
@@ -218,7 +218,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       </div>
 
       <div class="w3-third">
-        <img src="pic.png">
+        <img src="pic.png" style="width:100%;">
       </div>
     </div>
   </footer>
