--- a/a.html
+++ b/a.html
@@ -227,7 +227,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     </div>
   </footer>
   
-  <div class="w3-black w3-center w3-padding-24">© Made by @nkush<!-- End page content -->
+  <div class="w3-black w3-center w3-padding-24">copyright ©️ Made by @nkush<!-- End page content -->
 </div>
 <p style="border:2px solid steelblue; background-color: violet; text-align: center; text-shadow: teal 2px 1px 1px; color: whitesmoke;">MY Socail media content us</p>
 <p style="text-align: center;">coming soon <svg style="color:rgb(76, 0, 255);" xmlns="http://www.w3.org/2000/svg" width="30" height="30"  fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
